@@ -19,7 +19,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when7ElementsThen9() {
        ConvertList2Array res = new ConvertList2Array();
-        int[][] result = res.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] result = res.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -30,7 +30,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when5ElementsThen6() {
         ConvertList2Array res = new ConvertList2Array();
-        int[][] result = res.toArray(Arrays.asList(1, 2, 3, 4, 5), 2);
+        int[][] result = res.toArray(List.of(1, 2, 3, 4, 5), 2);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 0}
@@ -40,7 +40,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when6ElementsThen6() {
         ConvertList2Array res = new ConvertList2Array();
-        int[][] result = res.toArray(Arrays.asList(1, 2, 3, 4, 5, 6), 2);
+        int[][] result = res.toArray(List.of(1, 2, 3, 4, 5, 6), 2);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6}
@@ -50,7 +50,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when6ElementsThen8and4Rows() {
         ConvertList2Array res = new ConvertList2Array();
-        int[][] result = res.toArray(Arrays.asList(1, 2, 3, 4, 5, 6), 4);
+        int[][] result = res.toArray(List.of(1, 2, 3, 4, 5, 6), 4);
         int[][] expect = {
                 {1, 2},
                 {3, 4},
@@ -62,11 +62,11 @@ public class ConvertList2ArrayTest {
     @Test
     public void convertToListTest() {
         ConvertList2Array res = new ConvertList2Array();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[] {1, 2});
-        list.add(new int[] {1, 2, 3});
-        list.add(new int[] {0, 5, 6, 4, 8});
-        List<Integer> expect = Arrays.asList(1, 2, 1, 2, 3, 0, 5, 6, 4, 8);
+        List<int[]> list = List.of(
+                new int[] {1, 2},
+                new int[] {1, 2, 3},
+                new int[] {0, 5, 6, 4, 8});
+        List<Integer> expect = List.of(1, 2, 1, 2, 3, 0, 5, 6, 4, 8);
         assertThat(res.convertToList(list), is(expect));
     }
 }
